--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-body {
+body, html {
   margin: 0;
   padding: 0;
-  /* background-color: black; */
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
 }
 
-.popup, .info-toggle, .css-container .info-text {
+.popup, .list-content, .info-toggle, .css-container .info-text {
   color: white;
   background-color: rgba(255, 255, 255, 0.3);
   font-family: "Gill Sans", sans-serif;
@@ -13,7 +16,7 @@ body {
   backdrop-filter: blur(10px);
 }
 
-.button-interaction, .info-toggle button, .css-container .info-text a {
+.button-interaction, .list-content a, .info-toggle button, .css-container .info-text a {
   color: white;
   background-color: black;
   padding: 0.7em;
@@ -21,21 +24,39 @@ body {
   text-decoration: none;
   border-radius: 25%/50%;
 }
-.button-interaction:hover, .info-toggle button:hover, .css-container .info-text a:hover {
+.button-interaction:hover, .list-content a:hover, .info-toggle button:hover, .css-container .info-text a:hover {
   color: black;
   background-color: white;
+}
+@media (max-width: 1024px) {
+  .button-interaction, .list-content a, .info-toggle button, .css-container .info-text a {
+    font-size: x-small;
+  }
+}
+@media (min-width: 1024px) {
+  .button-interaction, .list-content a, .info-toggle button, .css-container .info-text a {
+    font-size: large;
+  }
 }
 
 .css-container {
   position: absolute;
-  pointer-events: "none";
   top: 0;
+}
+.css-container .fadeIn {
+  opacity: 0;
+  animation: fade 1s forwards;
+}
+@keyframes fade {
+  to {
+    opacity: 1;
+  }
 }
 @media (min-width: 1024px) {
   .css-container .info-text {
     position: absolute;
     left: 20em;
-    top: -15em;
+    top: 15em;
     border-radius: 2em;
     width: 25%;
     min-height: 10%;
@@ -43,8 +64,9 @@ body {
 }
 @media (max-width: 1024px) {
   .css-container .info-text {
-    top: 15em;
-    min-height: 10%;
+    top: 10em;
+    height: auto;
+    width: 100%;
     text-align: center;
   }
 }
@@ -55,17 +77,23 @@ body {
   .css-container .info-text p {
     margin-left: 10%;
     margin-right: 10%;
+    font-size: x-small;
   }
 }
 .css-container .info-text .header-info {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   justify-items: center;
 }
 .css-container .info-text .header-info button {
   all: unset;
-  margin: 0.25em;
-  font-size: xx-large;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+@media (max-width: 1024px) {
+  .css-container .info-text .header-info button {
+    font-size: small;
+  }
 }
 .css-container .info-text .header-info button:hover {
   transform: scale(1.2);
@@ -74,64 +102,112 @@ body {
 .css-container .info-text .header-info h1 {
   flex-grow: 3;
 }
-.css-container .info-text .header-info {
-  /* padding: 10px; */
+@media (max-width: 1024px) {
+  .css-container .info-text .header-info h1 {
+    font-size: medium;
+  }
 }
 
 canvas {
+  overflow: hidden;
   z-index: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .info-toggle {
   display: flex;
+  border-radius: 2em;
+  align-items: center;
+  top: calc(-50% + 5% + 5px);
+  justify-content: space-between;
+  height: 5%;
 }
 @media (min-width: 1024px) {
   .info-toggle {
-    border-radius: 2em;
-    align-items: center;
-    top: -45%;
     width: 30%;
     height: 5%;
   }
 }
 @media (max-width: 1024px) {
   .info-toggle {
-    position: absolute;
-    align-items: center;
-    top: -46%;
-    min-width: 100%;
+    width: 50%;
+    height: 5%;
   }
 }
-.info-toggle {
-  justify-content: space-between;
+@media (min-width: 1024px) {
+  .info-toggle * {
+    font-size: x-large;
+  }
+}
+@media (max-width: 1024px) {
+  .info-toggle * {
+    font-size: medium;
+  }
 }
 .info-toggle * {
-  height: 2.5%;
   margin: 1em;
   padding: 1em;
   align-items: center;
 }
 .info-toggle button {
-  font-size: large;
+  line-height: 10%;
   border: none;
   height: 2em;
-  padding: 1em;
-  line-height: 1%;
+  margin-right: 0.1em;
 }
 .info-toggle label {
-  font-size: x-large;
+  line-height: 15%;
+  margin-right: 0.1em;
+}
+.info-toggle .association {
+  all: initial;
+  margin: 0;
+  margin-left: 0.1em;
+  padding: 0;
   line-height: 10%;
 }
-
-.fadeIn {
-  opacity: 0;
-  animation: fade 1s forwards;
+@media (min-width: 1024px) {
+  .info-toggle .association {
+    font-size: x-large;
+  }
+}
+@media (max-width: 1024px) {
+  .info-toggle .association {
+    font-size: medium;
+  }
+}
+.info-toggle .association:hover {
+  transform: scale(1.2);
 }
 
-@keyframes fade {
-  to {
-    opacity: 1;
+.list-content {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1024px) {
+  .list-content {
+    font-size: large;
+    width: 10%;
+    height: auto;
+    top: calc(-40% + 15px);
+    left: -40%;
+    border-radius: 2.5%;
   }
+}
+@media (max-width: 1024px) {
+  .list-content {
+    font-size: x-small;
+    width: 25%;
+    height: auto;
+    top: calc(-40% + 80px);
+    left: -30%;
+    border-radius: 5%;
+  }
+}
+.list-content a {
+  margin: 2%;
+  border-radius: 5%;
 }
 
 /*# sourceMappingURL=style.css.map */
