--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body, html {
   height: 100vh;
   overflow: hidden;
   position: fixed;
+  background-color: black;
 }
 
 .popup, .list-content, .info-toggle, .css-container .info-text {
@@ -28,14 +29,52 @@ body, html {
   color: black;
   background-color: white;
 }
-@media (max-width: 1024px) {
-  .button-interaction, .list-content a, .info-toggle button, .css-container .info-text a {
-    font-size: x-small;
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 5.76px;
   }
 }
-@media (min-width: 1024px) {
-  .button-interaction, .list-content a, .info-toggle button, .css-container .info-text a {
-    font-size: large;
+@media (max-width: 768px) {
+  h1 {
+    font-size: 15.36px;
+  }
+}
+@media (min-width: 768px) {
+  h1 {
+    font-size: 30.72px;
+  }
+}
+
+@media (max-width: 480px) {
+  div, p, a {
+    font-size: 3.36px;
+  }
+}
+@media (max-width: 768px) {
+  div, p, a {
+    font-size: 9.984px;
+  }
+}
+@media (min-width: 768px) {
+  div, p, a {
+    font-size: 13.312px;
+  }
+}
+
+@media (max-width: 480px) {
+  label {
+    font-size: 4.32px;
+  }
+}
+@media (max-width: 768px) {
+  label {
+    font-size: 13.824px;
+  }
+}
+@media (min-width: 768px) {
+  label {
+    font-size: 18.432px;
   }
 }
 
@@ -52,19 +91,18 @@ body, html {
     opacity: 1;
   }
 }
-@media (min-width: 1024px) {
+@media (min-aspect-ratio: 0.95) {
   .css-container .info-text {
     position: absolute;
-    left: 20em;
-    top: 15em;
+    left: 20%;
+    top: 15%;
     border-radius: 2em;
-    width: 25%;
-    min-height: 10%;
+    width: 30%;
   }
 }
-@media (max-width: 1024px) {
+@media (max-aspect-ratio: 0.95) {
   .css-container .info-text {
-    top: 10em;
+    top: 25%;
     height: auto;
     width: 100%;
     text-align: center;
@@ -73,11 +111,10 @@ body, html {
 .css-container .info-text p {
   text-align: justify;
 }
-@media (max-width: 1024px) {
+@media (max-aspect-ratio: 0.95) {
   .css-container .info-text p {
     margin-left: 10%;
     margin-right: 10%;
-    font-size: x-small;
   }
 }
 .css-container .info-text .header-info {
@@ -87,25 +124,34 @@ body, html {
 }
 .css-container .info-text .header-info button {
   all: unset;
+  appearance: none;
   padding-left: 1%;
   padding-right: 1%;
+  color: white;
 }
-@media (max-width: 1024px) {
+@media (max-width: 480px) {
   .css-container .info-text .header-info button {
-    font-size: small;
+    font-size: 9.6px;
   }
 }
-.css-container .info-text .header-info button:hover {
-  transform: scale(1.2);
-  color: red;
+@media (max-width: 768px) {
+  .css-container .info-text .header-info button {
+    font-size: 16.896px;
+  }
+}
+@media (min-width: 768px) {
+  .css-container .info-text .header-info button {
+    font-size: 24.576px;
+  }
+}
+@media (min-aspect-ratio: 0.95) {
+  .css-container .info-text .header-info button:hover {
+    transform: scale(1.2);
+    color: red;
+  }
 }
 .css-container .info-text .header-info h1 {
   flex-grow: 3;
-}
-@media (max-width: 1024px) {
-  .css-container .info-text .header-info h1 {
-    font-size: medium;
-  }
 }
 
 canvas {
@@ -123,26 +169,16 @@ canvas {
   justify-content: space-between;
   height: 5%;
 }
-@media (min-width: 1024px) {
+@media (min-aspect-ratio: 0.95) {
   .info-toggle {
     width: 30%;
     height: 5%;
   }
 }
-@media (max-width: 1024px) {
+@media (max-aspect-ratio: 0.95) {
   .info-toggle {
     width: 50%;
     height: 5%;
-  }
-}
-@media (min-width: 1024px) {
-  .info-toggle * {
-    font-size: x-large;
-  }
-}
-@media (max-width: 1024px) {
-  .info-toggle * {
-    font-size: medium;
   }
 }
 .info-toggle * {
@@ -167,14 +203,19 @@ canvas {
   padding: 0;
   line-height: 10%;
 }
-@media (min-width: 1024px) {
+@media (max-width: 480px) {
   .info-toggle .association {
-    font-size: x-large;
+    font-size: 9.6px;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .info-toggle .association {
-    font-size: medium;
+    font-size: 16.896px;
+  }
+}
+@media (min-width: 768px) {
+  .info-toggle .association {
+    font-size: 24.576px;
   }
 }
 .info-toggle .association:hover {
@@ -185,19 +226,17 @@ canvas {
   display: flex;
   flex-direction: column;
 }
-@media (min-width: 1024px) {
+@media (min-aspect-ratio: 0.95) {
   .list-content {
-    font-size: large;
-    width: 10%;
+    width: 15%;
     height: auto;
-    top: calc(-40% + 15px);
-    left: -40%;
+    top: calc(-40% + 30px);
+    left: -35%;
     border-radius: 2.5%;
   }
 }
-@media (max-width: 1024px) {
+@media (max-aspect-ratio: 0.95) {
   .list-content {
-    font-size: x-small;
     width: 25%;
     height: auto;
     top: calc(-40% + 80px);
