--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body, html {
   background-color: black;
 }
 
-.popup, .list-content, .info-toggle, .css-container .info-text {
+.popup, .list-content, .info-toggle, .css-container .info-text, .loadingbar {
   color: white;
   background-color: rgba(255, 255, 255, 0.3);
   font-family: "Gill Sans", sans-serif;
@@ -76,6 +76,29 @@ body, html {
   label {
     font-size: 18.432px;
   }
+}
+
+.loadingbar {
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+}
+.loadingbar * {
+  margin: 5px;
+}
+.loadingbar progress {
+  box-shadow: 2px 2px black;
+  border: 1px white solid;
+}
+.loadingbar progress::-webkit-progress-bar, .loadingbar progress {
+  background-color: black;
+}
+.loadingbar {
+  /* Style pour Firefox */
+}
+.loadingbar progress::-moz-progress-bar, .loadingbar progress::-webkit-progress-value {
+  background: linear-gradient(90deg, #005506, #45a049);
 }
 
 .css-container {
